[package]
name = "nom-mpq"
version = "2.0.8"
edition = "2024"
license = "MIT"
description = "A nom parser for the MoPaQ archive format"
repository = "https://github.com/sebosp/nom-mpq"
keywords = ["sc2replay", "starcraft2", "mpq", "MoPaQ"]
categories = ["games", "parsing"]

[dependencies]
nom = "8.0.0"
thiserror = "2"
tracing = "0.1"
flate2 = "1.1"
bzip2-rs = "0.1"
serde_json = "1.0"
convert_case = "0.11"

[dev-dependencies]
test-log = { version = "0.2", default-features = false, features = ["trace"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.6", features = ["derive"] }

[features]
default = ["tracing_info_level"]
tracing_off = ["tracing/max_level_off", "tracing/release_max_level_off"]
tracing_trace_level = [
  "tracing/max_level_trace",
  "tracing/release_max_level_trace",
]
tracing_debug_level = [
  "tracing/max_level_debug",
  "tracing/release_max_level_debug",
]
tracing_info_level = [
  "tracing/max_level_info",
  "tracing/release_max_level_info",
]
